src/token_stream/snapshots/ling__syntax__token_stream__tests__token_tree_1.snap
---
source: src/syntax/token_stream/mod.rs
expression: "get_stream(\"{{{}}}\")"
---
(TokenStream([
  Group(
    bracket_kind: Curly,
    tokens: TokenStream([
      Group(
        bracket_kind: Curly,
        tokens: TokenStream([
          Group(
            bracket_kind: Curly,
            tokens: TokenStream([]),
            span: Span(
              start: 2,
              end: 4,
            ),
          ),
        ]),
        span: Span(
          start: 1,
          end: 5,
        ),
      ),
    ]),
    span: Span(
      start: 0,
      end: 6,
    ),
  ),
]), [])
